@@ -1,5 +1,6 @@
 
 v1.9.7:
+ - BUG FIX: clean old redis fetch job in time on reloading ProxyFloat escaper
  - Feature: support TLS redis server
  - Removed: remove redis cluster support, a redis proxy should be used in front of the redis cluster
 
